--- a/td_dashboard/templates/td_dashboard/crfs.html
+++ b/td_dashboard/templates/td_dashboard/crfs.html
@@ -1,6 +1,6 @@
 <div class="panel-group">
 	<div class="panel panel-warning">
-    <div class="panel-heading">Case Report Forms</div>
+			<div class="panel-heading clearfix"><B>{{ selected_appointment.title }}</B>: {{ selected_appointment.subject_visit.report_datetime|date:"Y-m-d"| capfirst }}<span class="pull-right"><a href="{% url dashboard_url_name subject_identifier %} role="button" class="btn btn-sm btn-default">appointments</a></span></div>
 	    <div class="panel-body">
 			<table class="table table-bordered table-striped table-hover table-condensed">
 				<thead>
