--- a/td_dashboard/templates/td_dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/demographics.html
@@ -8,7 +8,7 @@
         {% endif %}
         <li class="list-group-item"><span class="test text-default">Reference date: {% now "Y-m-d" %}</span></li>
         <li class="list-group-item"><span class="test small text-default">Born</span>&nbsp<span class="test small text-info">{{ maternal_consent.dob|date:"Y-m-d" }}</span></li>
-        <li class="list-group-item"><span class="test small text-default">Age</span>&nbsp<span class="test small text-info">{{ maternal_consent.dob }}</span></li>
+        <li class="list-group-item"><span class="test small text-default">Age</span>&nbsp<span class="test small text-info">{% age_in_years maternal_consent.dob %}</span></li>
         <li class="list-group-item"><span class="test small text-default">Consented</span>&nbsp<span class="test small text-info">{{ maternal_consent.consent_datetime|date:"Y-m-d" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">HIV status at Enrollment</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.enrollment_result.result }}</span></li>
         <li class="list-group-item"><span class="test small text-default">HIV status</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.result }}</span></li>
