--- a/td_dashboard/templates/td_dashboard/appointments.html
+++ b/td_dashboard/templates/td_dashboard/appointments.html
@@ -1,10 +1,9 @@
 {% if not selected_appointment %}
 	<div class="panel-group">
 		<div class="panel panel-warning">
-				<div class="panel-heading">Appointments</div>
-		     	<div class="panel-body">                              
+				<div class="panel-heading"><span class="glyphicon glyphicon-calendar"></span> Schedule</div>
 		     		<div class="table table-responsive">
-				    <table class="table table-striped table-hover table-condensed">
+				    <table class="table table-striped table-hover">
 					    <tbody>
 			    		{% if not appointments %}
 			        		<tr><td colspan="8"><i>No appointments scheduled</i></td></tr>
@@ -19,7 +18,7 @@
 						        {% if appointment.appt_status == 'in_progress' %}
 						        	{% if appointment.visit %}
 						        		<a href="{{ appointment.visit.get_absolute_url }}?next={% url dashboard_url_name subject_identifier %}">{{ appointment.visit.report_datetime |date:"Y-m-d D"| capfirst }}</a>
-						        		<span class="pull-right"><a href="{% url dashboard_url_name appointment.str_pk subject_identifier %}" role="button" class="btn btn-sm btn-default">forms</a></span>
+						        		<span class="pull-right"><a href="{% url dashboard_url_name appointment.str_pk subject_identifier %}" role="button" class="btn btn-sm btn-default"><i class="fa fa-tasks" aria-hidden="true"></i> Forms</a></span>
 						        	{% else %}
 						        		<a href="{% url add_visit_url_name %}?appointment={{ appointment.str_pk }}&next={% url dashboard_url_name subject_identifier %}&appointment={{ appointment.pk }}">Start visit</a>
 						        	{% endif %}
@@ -30,7 +29,6 @@
 			    		{% endif %}
 			    		</tbody>
 				    </table>
-				    </div>
 				</div>
 		</div>
 	</div>	    
