--- a/td_dashboard/templates/td_dashboard/crfs.html
+++ b/td_dashboard/templates/td_dashboard/crfs.html
@@ -1,16 +1,9 @@
+{% load tz %}
 <div class="panel-group">
 	<div class="panel panel-warning">
-			<div class="panel-heading clearfix"><B>{{ selected_appointment.title }}</B>: {{ selected_appointment.subject_visit.report_datetime|date:"Y-m-d"| capfirst }}<span class="pull-right"><a href="{% url dashboard_url_name subject_identifier %} role="button" class="btn btn-sm btn-default">appointments</a></span></div>
-	    <div class="panel-body">
-			<table class="table table-bordered table-striped table-hover table-condensed">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>Form Title</th>
-						<th>Created | Modified</th>
-						<th></th>                        
-					</tr>
-				</thead>
+			<div class="panel-heading clearfix"><i class="fa fa-tasks" aria-hidden="true"></i> {{ selected_appointment.title|lower|title }} started on {{ selected_appointment.visit.report_datetime|localtime|date:"Y-m-d H:i" }}<span class="pull-right"><a href="{% url dashboard_url_name subject_identifier %} role="button" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-calendar"></span> Appointments</a></span></div>
+			<div class="table table-responsive">
+			<table class="table table-striped table-hover">
 				<tbody>
 					{% for crf in crfs %}
 						<tr>
@@ -19,23 +12,21 @@
 						    	{% if crf.entry_status == 'NOT_REQUIRED' %}
 						        	<del>{{ crf.title|title }}</del>
 						        {% else %}
-						        	{% if crf.entry_status == 'REQUIRED' %}
-						        		<span title="{{crf.get_entry_status_display }}" class="glyphicon glyphicon-asterisk small" style="color:red"></span>
-						        	{% elif crf.entry_status == 'KEYED' %}
-						        		<span title="{{crf.get_entry_status_display }}" class="glyphicon glyphicon-ok small" style="color:green"></span>
-						        	{% endif %}
-						        	<a href="{{ crf.url }}?visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}">{{ crf.title|title }}</a>
+						        	{{ crf.title|title }}
 						   		{% endif %}
 						    </td>                
-						    <td>{% if crf.instance.user_created %}
-							    	<span class="small">
+						    {% if crf.instance.user_created %}
+							    	<td><span class="small">
 							    		{{ crf.instance.user_created }} on {{ crf.instance.created|date:"Y-m-d  H:i" }}
 										{% if crf.instance.user_modified %} | {{ crf.instance.user_modified }} on {{ crf.instance.modified|date:"Y-m-d H:i" }}{% endif %}
-									</span>
+									</span></td>
 								{% endif %}
-								</td>  
 						    <td>
-						        <a href="#" role="button" class="btn btn-sm btn-default">View</a><a href="#" role="button" class="btn btn-sm btn-default">Audit</a>
+								<span class="pull-right">
+								<a role="button" class="btn btn-sm {% if crf.instance %}btn-success{% else %}btn-danger{% endif %}" href="{{ crf.url }}?visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}">{% if crf.instance %}Edit{% else %}Add{% endif %}</a>
+						        <a href="#" role="button" class="btn btn-sm btn-default">View</a>
+						        <a href="#" role="button" class="btn btn-sm btn-default">Audit</a>
+						       	</span>
 						    </td>
 				  		</tr>
 				  	{% endfor %}
