--- a/td_dashboard/templates/td_dashboard/demographics.html
+++ b/td_dashboard/templates/td_dashboard/demographics.html
@@ -6,17 +6,18 @@
             <li class="list-group-item"><span class="text text-danger small">Not eligible {{ antenatalenrollment.reasons_not_eligible|default:"eligibility error!!" }}</span></li>
           {% endif %}
         {% endif %}
-        <li class="list-group-item"><span class="test text-default">Reference date: {% now "Y-m-d" %}</span></li>
+        <li class="list-group-item"><a role="button" class="btn btn-sm btn-danger" href=""><i class="fa fa-address-card" aria-hidden="true"></i> Maternal Locator</a></li>
+        <li class="list-group-item"><span class="test text-default"><span class="glyphicon glyphicon-user"></span>  as of {% now "Y-m-d" %}</span></li>
+        <li class="list-group-item"><span class="test small text-default">HIV status</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.result }}</span></li>
+        <li class="list-group-item"><span class="test small text-default">Randomized</span>&nbsp<span class="test small text-info">{{ maternal_rando.rx|default:"No" }}</span></li>
+        <li class="list-group-item"><span class="test small text-default">Delivery date</span>&nbsp<span class="test small text-info">{{ pregnancy.delivery_date|date:"Y-m-d"|default:"?" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Born</span>&nbsp<span class="test small text-info">{{ maternal_consent.dob|date:"Y-m-d" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Age</span>&nbsp<span class="test small text-info">{{ maternal_consent.dob }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Consented</span>&nbsp<span class="test small text-info">{{ maternal_consent.consent_datetime|date:"Y-m-d" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">HIV status at Enrollment</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.enrollment_result.result }}</span></li>
-        <li class="list-group-item"><span class="test small text-default">HIV status</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.result }}</span></li>
         <li class="list-group-item"><span class="test small text-default">GA by LMP</span>&nbsp<span class="test small text-info">{{ pregnancy.ga_by_lmp }}wks</span></li>
         <li class="list-group-item"><span class="test small text-default">GA</span>&nbsp<span class="test small text-info">{{ pregnancy.ga.weeks }}wks</span></li>
         <li class="list-group-item"><span class="test small text-default">EDD</span>&nbsp<span class="test small text-info">{{ pregnancy.edd.edd|date:"Y-m-d" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Planned delivery site</span>&nbsp<span class="test small text-info">{% if maternal_lab_del.delivery_hospital == 'OTHER' %}{{ maternal_lab_del.delivery_hospital_other }}{% else %}{{ maternal_lab_del.delivery_hospital|default:"?" }} {% endif %}</span></li>
-        <li class="list-group-item"><span class="test small text-default">Delivery date</span>&nbsp<span class="test small text-info">{{ pregnancy.delivery_date|date:"Y-m-d"|default:"?" }}</span></li>
-        <li class="list-group-item"><span class="test small text-default">Randomized</span>&nbsp<span class="test small text-info">{{ maternal_rando.rx|default:"No" }}</span></li>
         </ul>
     </div>
