--- a/td_dashboard/templates/td_dashboard/crfs.html
+++ b/td_dashboard/templates/td_dashboard/crfs.html
@@ -13,18 +13,26 @@
 						        	<del>{{ crf.title|title }}</del>
 						        {% else %}
 						        	{{ crf.title|title }}
+								    {% if crf.instance.user_created %}
+									    <p class="text small text-info">
+										    {{ crf.instance.user_created }} on {{ crf.instance.created|date:"Y-m-d  H:i" }}
+											{% if crf.instance.user_modified %} | {{ crf.instance.user_modified }} on {{ crf.instance.modified|date:"Y-m-d H:i" }}{% endif %}
+										</p>
+									{% endif %}
 						   		{% endif %}
 						    </td>                
-						    {% if crf.instance.user_created %}
-							    	<td><span class="small">
-							    		{{ crf.instance.user_created }} on {{ crf.instance.created|date:"Y-m-d  H:i" }}
-										{% if crf.instance.user_modified %} | {{ crf.instance.user_modified }} on {{ crf.instance.modified|date:"Y-m-d H:i" }}{% endif %}
-									</span></td>
-								{% endif %}
 						    <td>
 								<span class="pull-right">
-								<a role="button" class="btn btn-sm {% if crf.instance %}btn-success{% else %}btn-danger{% endif %}" href="{{ crf.url }}?visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">{% if crf.instance %}<span class="glyphicon glyphicon-pencil"></span>Edit{% else %}<span class="glyphicon glyphicon-plus"></span> Add{% endif %}</a>
-						        <a href="#" role="button" class="btn btn-sm btn-default">View</a>
+								<a role="button" class="btn btn-sm {% if crf.instance %}btn-success{% else %}{% if crf.entry_status == 'NOT_REQUIRED' %}btn-default{% else %}btn-danger{% endif %}{% endif %}" 
+									{% if crf.entry_status == 'NOT_REQUIRED' %} disabled {% endif %} 
+									href="{{ crf.url }}?visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">
+									{% if crf.instance %}
+										<span class="glyphicon glyphicon-pencil"></span> Edit
+									{% else %}
+										<span class="glyphicon glyphicon-plus"></span> Add
+									{% endif %}
+								</a>
+						        <a role="button" class="btn btn-sm btn-default" {% if crf.entry_status == 'NOT_REQUIRED' or not crf.instance %} disabled {% endif %} href="{{ crf.url }}?edc_readonly=1&visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">View</a>
 						        <a href="#" role="button" class="btn btn-sm btn-default">Audit</a>
 						       	</span>
 						    </td>
