--- a/td_dashboard/templates/td_dashboard/search_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/search_dashboard.html
@@ -25,6 +25,18 @@
                   {% if results %}
                     <div class="table-responsive">
                     <table class="table table-condensed table-hover">
+                      <thead>
+                      		<th>#</th>
+                      		<th>Dashboard</th>
+                      		<th>Edit Consent</th>
+                      		<th>Edit Eligibility</th>
+                      		<th>Report Date</th>
+                      		<th>Reference</th>
+                      		<th>Eligibility Status</th>
+                      		<th>Age</th>
+                      		<th>User Created</th>
+                      		<th>User Modified</th>
+                      </thead>
                       <tbody>
                         {% for obj in results %}
                           <tr>
