correcting table columns header

--- a/td_dashboard/templates/td_dashboard/search_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/search_dashboard.html
@@ -27,15 +27,16 @@
                     <table class="table table-condensed table-hover">
                       <thead>
                       		<th>#</th>
+                      		<th>Subject Identifier</th>
                       		<th>Dashboard</th>
-                      		<th>Edit Consent</th>
-                      		<th>Edit Eligibility</th>
+                      		<th>Consent</th>
+                      		<th>Eligibility</th>
                       		<th>Report Date</th>
                       		<th>Reference</th>
-                      		<th>Eligibility Status</th>
+                      		<th>Eligibility</th>
                       		<th>Age</th>
-                      		<th>User Created</th>
-                      		<th>User Modified</th>
+                      		<th>Created by/Modified by</th>
+                      		<th>Modified Date</th>
                       </thead>
                       <tbody>
                         {% for obj in results %}
