--- a/td_dashboard/templates/td_dashboard/subject_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_dashboard.html
@@ -1,18 +1,16 @@
 {% extends "td_dashboard/dashboard.html" %}
-
 {% load staticfiles %}
+
 
 {% block top_bar %}
     {% include "td_dashboard/top_bar.html" %}
 {% endblock top_bar %}
 
-{% block enrollments %}
-    {% include "td_dashboard/enrollments.html" %}
-{% endblock enrollments %}
-
 {% block left_side_bar %}
   {% include "td_dashboard/demographics.html" %}
 {% endblock left_side_bar%}
+
+{% block right_side_bar %}{% endblock right_side_bar%}
 
 {% block appointments %}
   	 {% include "td_dashboard/appointments.html" %} 
@@ -21,7 +19,7 @@
 {% block crfs %}
 	{% if crfs %}
   		{% include "td_dashboard/crfs.html" %}
-  	{% endif %}    
+  {% endif %}    
 {% endblock crfs %}
 
 {% block requisitions %}
@@ -30,8 +28,4 @@
   {% endif %}    
 {% endblock requisitions %}
 
-{% block locator_information %}
-  {% if maternal_locator %}
-	 {% include "td_dashboard/maternal_locator.html" %}
-  {% endif %}
-{% endblock locator_information %}
+{% block locator_information %}{% endblock locator_information %}
