--- a/td_dashboard/templates/td_dashboard/crfs.html
+++ b/td_dashboard/templates/td_dashboard/crfs.html
@@ -1,7 +1,7 @@
 {% load tz %}
 <div class="panel-group">
 	<div class="panel panel-warning">
-			<div class="panel-heading clearfix"><i class="fa fa-tasks" aria-hidden="true"></i> {{ selected_appointment.title|lower|title }} started on {{ selected_appointment.visit.report_datetime|localtime|date:"Y-m-d H:i" }}<span class="pull-right"><a href="{% url dashboard_url_name subject_identifier %} role="button" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-calendar"></span> Appointments</a></span></div>
+			<div class="panel-heading clearfix"><i class="fa fa-tasks" aria-hidden="true"></i> {{ selected_appointment.title|lower|title }} started on {{ selected_appointment.visit.report_datetime|localtime|date:"Y-m-d H:i" }}<span class="pull-right"><a href="{% url subject_dashboard_url_name subject_identifier %} role="button" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-calendar"></span> Appointments</a></span></div>
 			<div class="table table-responsive">
 			<table class="table table-striped table-hover">
 				<tbody>
@@ -25,14 +25,14 @@
 								<span class="pull-right">
 								<a role="button" class="btn btn-sm {% if crf.instance %}btn-success{% else %}{% if crf.entry_status == 'NOT_REQUIRED' %}btn-default{% else %}btn-danger{% endif %}{% endif %}" 
 									{% if crf.entry_status == 'NOT_REQUIRED' %} disabled {% endif %} 
-									href="{{ crf.url }}?visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">
+									href="{{ crf.url }}?visit_code={{ crf.visit_code }}&selected_appointment={{ selected_appointment.str_pk }}&subject_identifier={{subject_identifier}}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}&next={{ subject_dashboard_url_name }},subject_identifier,selected_appointment">
 									{% if crf.instance %}
 										<span class="glyphicon glyphicon-pencil"></span> Edit
 									{% else %}
 										<span class="glyphicon glyphicon-plus"></span> Add
 									{% endif %}
 								</a>
-						        <a role="button" class="btn btn-sm btn-default" {% if crf.entry_status == 'NOT_REQUIRED' or not crf.instance %} disabled {% endif %} href="{{ crf.url }}?edc_readonly=1&visit_code={{ crf.visit_code }}&appointment_pk={{crf.appointment.str_pk}}&subject_identifier={{subject_identifier}}&next={{ dashboard_url }}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">View</a>
+						        <a role="button" class="btn btn-sm btn-default" {% if crf.entry_status == 'NOT_REQUIRED' or not crf.instance %} disabled {% endif %} href="{{ crf.url }}?edc_readonly=1&visit_code={{ crf.visit_code }}&selected_appointment={{ selected_appointment.str_pk }}&subject_identifier={{subject_identifier}}&{{ crf.visit_attr_name }}={{ selected_appointment.visit.pk }}">View</a>
 						        <a href="#" role="button" class="btn btn-sm btn-default">Audit</a>
 						       	</span>
 						    </td>
