--- a/td_dashboard/templates/td_dashboard/requisitions.html
+++ b/td_dashboard/templates/td_dashboard/requisitions.html
@@ -6,12 +6,12 @@
 			<button type="button" id="btn-print-label" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-print"></span> Print selected</button>
 			</span>
 		</div>
-     		<div class="table table-responsive">
+ 		<div class="table table-responsive">
 			<table class="table table-striped table-hover">
 				<tbody>
 				{% for requisition in requisitions %}
 			    	<tr>
-			    		<td><label><input type="checkbox" name="requisition-checkbox" value="{{requisition.subject_requisition.pk}}"></label></td>
+			    		<td><label><input type="checkbox" name="requisition-checkbox" value="{{ requisition.subject_requisition.pk }}"></label></td>
 			    		<td>
 					    	{% if crf.entry_status == 'NOT_REQUIRED' %}
 					        	<del>{{ requisition.panel_name|title }}</del>
@@ -26,7 +26,7 @@
 		    			</td>
 					    <td>
 							<span class="pull-right">
-							<a role="button" class="btn btn-sm {% if requisition.instance %}btn-success{% else %}btn-danger{% endif %}" href="{{ requisition.url }}?visit_code={{ requisition.visit_code }}&appointment_pk={{requisition.appointment.str_pk}}&subject_identifier={{subject_identifier}}&panel_name={{requisition.panel_name}}&next={{ dashboard_url }}">{% if requisition.instance %}Edit{% else %}Add{% endif %}</a>
+							<a role="button" class="btn btn-sm {% if requisition.instance %}btn-success{% else %}btn-danger{% endif %}" href="{{ requisition.url }}?visit_code={{ requisition.visit_code }}&selected_appointment={{ selected_appointment.str_pk }}&subject_identifier={{ subject_identifier }}&panel_name={{ requisition.panel_name }}&next={{ subject_dashboard_url_name }},subject_identifier,selected_appointment">{% if requisition.instance %}Edit{% else %}Add{% endif %}</a>
 					        <a href="#" role="button" class="btn btn-sm btn-default">View</a>
 					        <a href="#" role="button" class="btn btn-sm btn-default">Audit</a>
 					       	</span>
