--- a/tshilo_dikotla/templates/tshilo_dikotla/home.html
+++ b/tshilo_dikotla/templates/tshilo_dikotla/home.html
@@ -14,24 +14,11 @@
           <li class="active"><a href="#" disabled">Home 
                 <span class="glyphicon glyphicon-home pull-right" aria-hidden="true"></span>
           </a></li>
-          <li>
-            <a id="pill-subjects" class="dropdown-toggle" data-toggle="dropdown" href="#">Subjects
-                <span class="caret pull-right"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-header">Subjects</li>
-              
-              <li><a id="link-maternal" href="{% url 'search_url' %}">Maternal</a></li>
-              {% comment %}
-              <li><a id="link-infant" href="{% url 'section_url' 'infant' %}">Infant</a></li> -->
-              {% endcomment %}
-          </ul>
-          </li>
-          {% comment %}
-          <li><a id="pill-call-manager" href="{% url 'admin:call_manager_call_changelist' %}">Call Subjects
-                <span class="glyphicon glyphicon-earphone pull-right" aria-hidden="true"></span>
+          <li><a id="pill-maternal" href="{% url 'search_url' %}">Maternal</a></li>
+          <li><a id="pill-infant" href="{% url 'search_url' %}">Infant</a></li> 
+          {% comment%}<li><a id="pill-call-manager" href="{% url 'edc_call_manager_admin:call_manager_call_changelist' %}">Call Subjects
+                <span class="glyphicon glyphicon-earphone pull-right" aria-hidden="true"></span>{% endcomment %}
           </a></li>
-          {% endcomment %}
           <li><a id="link-verify-consent-subjects" href="{% url 'td_maternal_admin:td_maternal_maternalconsent_changelist' %}">Verify Consents
                 <!--<span id="bdg-consent-verified" class="badge pull-right"></span>-->
           </a></li>
