--- a/td_dashboard/templates/td_dashboard/subject_dashboard.html
+++ b/td_dashboard/templates/td_dashboard/subject_dashboard.html
@@ -1,4 +1,4 @@
-{% extends "td_dashboard/dashboard.html" %}
+{% extends "edc_dashboard/dashboard.html" %}
 {% load staticfiles %}
 
 
@@ -13,18 +13,18 @@
 {% block right_side_bar %}{% endblock right_side_bar%}
 
 {% block appointments %}
-  	 {% include "td_dashboard/appointments.html" %} 
+  	 {% include "edc_dashboard/appointments.html" %} 
 {% endblock appointments %}
 
 {% block crfs %}
 	{% if crfs %}
-  		{% include "td_dashboard/crfs.html" %}
+  		{% include "edc_dashboard/crfs.html" %}
   {% endif %}    
 {% endblock crfs %}
 
 {% block requisitions %}
   {% if requisitions %}
-  	{% include "td_dashboard/requisitions.html" %}
+  	{% include "edc_dashboard/requisitions.html" %}
   {% endif %}    
 {% endblock requisitions %}
 
