--- a/td_dashboard/templates/td_dashboard/maternal_top_bar.html
+++ b/td_dashboard/templates/td_dashboard/maternal_top_bar.html
@@ -1,7 +1,7 @@
 {% load tshilo_dikotla_extras %}
     <div class="panel-group">
     	<div class="panel panel-info">
-          <div class="panel-heading clearfix"><i class="fa fa-tachometer" aria-hidden="true"></i> {{ subject_identifier }}
+          <div class="panel-heading clearfix"><i class="fa fa-tachometer" aria-hidden="true"></i> Mother {{ subject_identifier }}
           <span class="pull-right">
             {% for obj in enrollment_objects %}
               <a role="button" class="btn btn-sm {% if obj.id %}btn-success{% else %}btn-default{% endif %}" href="{% if obj.get_absolute_url %}{{ obj.get_absolute_url }}{% else %}{% url obj.admin_url_name %}{% endif %}?next={{ subject_dashboard_url_name }},subject_identifier&subject_identifier={{ subject_identifier }}">{%if obj.pk %}<span class="glyphicon glyphicon-pencil"></span>{% else %}<span class="glyphicon glyphicon-plus"></span>{% endif %} {{ obj.verbose_name }}</a>
