--- a/td_dashboard/templates/td_dashboard/maternal_demographics.html
+++ b/td_dashboard/templates/td_dashboard/maternal_demographics.html
@@ -10,10 +10,10 @@
             <li class="list-group-item"><a role="button" class="btn btn-sm btn-default" href="{% url 'infant_dashboard_url' subject_identifier=infant }}?subject_identifier={{ infant }}"><i class="fa fa-smile-o" aria-hidden="true"></i> {{ infant }}</a></li>
         {% endfor %}
         <li class="list-group-item"><a role="button" class="btn btn-sm {% if maternal_locator.pk %}btn-default{% else %}btn-danger{% endif %}" href="{{ maternal_locator.get_absolute_url }}?subject_identifier={{ subject_identifier }}&next={{ subject_dashboard_url_name }},subject_identifier"><i class="fa fa-pencil" aria-hidden="true"></i> <i class="fa fa-address-card" aria-hidden="true"></i> Maternal Locator</a></li>
-        <li class="list-group-item"><span class="test text-default"><span class="glyphicon glyphicon-user"></span>  as of {% now "Y-m-d" %}</span></li>
+        <li class="list-group-item"><span class="test text-default"><i class="fa fa-female" aria-hidden="true"></i>  as of {% now "Y-m-d" %}</span></li>
         <li class="list-group-item"><span class="test small text-default">HIV status</span>&nbsp<span class="test small text-info">{{ maternal_hiv_status.result }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Randomized</span>&nbsp<span class="test small text-info">{{ maternal_rando.rx|default:"No" }}</span></li>
-        <li class="list-group-item"><span class="test small text-default">Delivery date</span>&nbsp<span class="test small text-info">{{ pregnancy.delivery_date|date:"Y-m-d"|default:"?" }}</span></li>
+        <li class="list-group-item"><span class="test small text-default">Delivered</span>&nbsp<span class="test small text-info">{{ pregnancy.delivery_datetime|date:"Y-m-d"|default:"?" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Born</span>&nbsp<span class="test small text-info">{{ maternal_consent.dob|date:"Y-m-d" }}</span></li>
         <li class="list-group-item"><span class="test small text-default">Age</span>&nbsp<span class="test small text-info">{% age_in_years maternal_consent.dob %}</span></li>
         <li class="list-group-item"><span class="test small text-default">Consented</span>&nbsp<span class="test small text-info">{{ maternal_consent.consent_datetime|date:"Y-m-d" }}</span></li>
