--- a/td_dashboard/templates/maternal_dashboard.html
+++ b/td_dashboard/templates/maternal_dashboard.html
@@ -10,6 +10,10 @@
         <td><B>Born:</B> {{maternal_consent.dob|date:"Y-m-d" }}</td> 
         <td><B>Age:</B> {{maternal_consent.dob|age }}</td>
         <td><B>Consented:</B> {{maternal_consent.consent_datetime|date:"Y-m-d H:i" }}</td>
+        <td><B>Maternal Contact:</B>
+          <A href="{% url 'admin:td_maternal_maternalcontact_add' %}?registered_subject={{ registered_subject.pk }}">
+              {{ registered_subject.subject_identifier }}
+          </A></td>
     </tr>
 </table>
 <table>
