--- a/td_maternal/templates/maternaleligibility_include.html
+++ b/td_maternal/templates/maternaleligibility_include.html
@@ -4,6 +4,7 @@
 <div class="results">
       <table cellspacing="0" id="result_list">
         <thead><tr>
+        <th>TD Consent Version</th>
         <th>Dashboard</th>
         <th>Eligibility</th>
         <th>Loss</th>
@@ -18,19 +19,26 @@
 
       {% for maternal_eligibility in search_result.object_list %}
                 <tr class="{% cycle 'row2' 'row1' %}">
+                <td>
+                	{% if maternal_eligibility.td_consent_version %}
+                		<a href="{% url 'admin:td_maternal_tdconsentversion_change' maternal_eligibility.td_consent_version.id %}?next=section_url&section_name=maternal">Edit TD Consent Version</a>
+                	{% else %}
+                		<a href="{% url 'admin:td_maternal_tdconsentversion_add' %}?maternal_eligibility={{maternal_eligibility.pk}}&next=section_url&section_name=maternal">Select Consent Version</a>
+                	{% endif %}
+                </td>
                 {% if maternal_eligibility.is_consented %}
                 	<td>
                 		<ul>
 		                	{% for consent in maternal_eligibility.previous_consents %}
 		                		<li><A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}"><div nowrap>{{ consent.subject_identifier }} (V{{consent.version}})</div></A></li>
 		                	{% endfor %}
-		                	{% if not maternal_eligibility.have_latest_consent %}
-		                		<span style="color:red"><li><span><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">re-consent (V{{maternal_eligibility.current_consent_version}})</A></li>
+		                	{% if maternal_eligibility.re_consent %}
+		                		<span style="color:red"><li><span><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">re-consent (V{{maternal_eligibility.consent_version}})</A></li>
 		                	{% endif %}
 		                </ul>
 		            </td>
                 {% elif maternal_eligibility.is_eligible %}
-                    <td><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">add maternal consent (V{{maternal_eligibility.current_consent_version}})</A></td>
+                    <td><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">add maternal consent (V{{maternal_eligibility.consent_version}})</A></td>
                 {% else %}
                     <td>{{ maternal_eligibility.ineligibility }}</td>
                 {% endif %}
