--- a/td_maternal/templates/maternaleligibility_include.html
+++ b/td_maternal/templates/maternaleligibility_include.html
@@ -28,14 +28,12 @@
                 </td>
                 {% if maternal_eligibility.is_consented %}
                 	<td>
-                		<ul>
 		                	{% for consent in maternal_eligibility.previous_consents %}
-		                		<li><A href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}"><div nowrap>{{ consent.subject_identifier }} (V{{consent.version}})</div></A></li>
+		                		<a href="{% url 'subject_dashboard_url' dashboard_type='maternal' dashboard_model='maternal_eligibility' dashboard_id=maternal_eligibility.pk show='appointments' %}"><div nowrap>{{ consent.subject_identifier }} (V{{consent.version}})</div></a>
 		                	{% endfor %}
 		                	{% if maternal_eligibility.re_consent %}
-		                		<span style="color:red"><li><span><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">re-consent (V{{maternal_eligibility.consent_version}})</A></li>
+		                		<span style="color:red"><span><a href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">re-consent (V{{maternal_eligibility.latest_consent_version}})</a>
 		                	{% endif %}
-		                </ul>
 		            </td>
                 {% elif maternal_eligibility.is_eligible %}
                     <td><A href="{% url 'admin:td_maternal_maternalconsent_add' %}?registered_subject={{maternal_eligibility.registered_subject.pk}}&next=section_url&section_name=maternal">add maternal consent (V{{maternal_eligibility.consent_version}})</A></td>
