--- a/td_dashboard/templates/maternal_dashboard.html
+++ b/td_dashboard/templates/maternal_dashboard.html
@@ -35,9 +35,15 @@
         <ol>
           <li>
           {% for subject_identifier,infant in infants.items %}
-           <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' %}">
-             {{subject_identifier}} {{ infant.gender }} {{ infant.first_name|encrypted }}
+          <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' %}?instruction=V1">
+             {{subject_identifier}} {{ infant.gender }} {{ infant.first_name|encrypted }} V1
           </A>
+          <br >
+          {% if maternal_consent.version == '3' %}
+	           <A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='registered_subject' dashboard_id=infant.dashboard_id show='appointments' %}?instruction=V3">
+	             {{subject_identifier}} {{ infant.gender }} {{ infant.first_name|encrypted }} V3
+	          </A>
+	      {% endif %}
           {% endfor %}
         </ol>        
     {% else %}    
