--- a/td_infant/templates/infantbirth_include.html
+++ b/td_infant/templates/infantbirth_include.html
@@ -17,7 +17,7 @@
                 <tr class="{% cycle 'row1' 'row2' %}">
                 <td>
 	                {% for consent in infantbirth.maternal_consents %}
-	                	<A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='infant_birth' dashboard_id=infantbirth.pk show='appointments' %}?instruction=V{{consent.version}}">{{ infantbirth.registered_subject.subject_identifier }} V{{consent.version}}</A><br >
+	                	<A href="{% url 'subject_dashboard_url' dashboard_type='infant' dashboard_model='infant_birth' dashboard_id=infantbirth.pk show='appointments' instruction='V'|add:consent.version %}">{{ infantbirth.registered_subject.subject_identifier }} V{{consent.version}}</A><br >
 	                {% endfor %}        
                 </td>
                 <td>{{ infantbirth.registered_subject.subject_identifier|escape}}</td>
